[tool.poetry]
name = "mcp-server-test"
# placeholder for poetry-dynamic-versioning
version = "0.0.0"
description = "mcp server test"
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8.0"
requests = "^2.30.0"
pydantic = "^2.0.3"
pandas = ">=1.5.3"
msgpack = "^1.0.3"
websockets = ">=10.4"
sseclient-py = "^1.7.2"
mcp
